--- a/package.json
+++ b/package.json
@@ -1,29 +1,40 @@
 {
-  "name": "appengine-hello-world",
-  "description": "Simple Hello World Node.js sample for Google App Engine Standard Environment.",
+  "name": "wix-telemetry-appengine",
+  "description": "wix-code telemetry sink example for appengine",
   "version": "0.0.1",
   "private": true,
-  "license": "Apache-2.0",
-  "author": "Google Inc.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/GoogleCloudPlatform/nodejs-docs-samples.git"
+    "url": "https://github.com/wix-incubator/wix-telemetry-appengine"
   },
   "engines": {
-    "node": ">=8"
+    "node": ">=10"
+  },
+  "files": [
+    "app"
+  ],
+  "author": {
+    "name": "San Golan",
+    "email": "sang@wix.com"
   },
   "scripts": {
-    "deploy": "gcloud app deploy",
-    "start": "node app.js",
-    "system-test": "repo-tools test app",
-    "test": "npm run system-test",
-    "e2e-test": "repo-tools test deploy"
+    "clean": "rm -rf node_modules package-lock.json",
+    "start": "node app/index.js",
+    "test": "jest",
+    "posttest": "npm run lint",
+    "lint": "eslint .",
+    "deploy": "gcloud app deploy"
   },
   "dependencies": {
+    "@google-cloud/logging": "^4.4.0",
+    "body-parser": "^1.18.3",
     "express": "^4.16.3"
   },
   "devDependencies": {
-    "@google-cloud/nodejs-repo-tools": "^3.0.0"
+    "eslint": "^5.15.2",
+    "eslint-config-google": "^0.12.0",
+    "jest": "^24.0.0",
+    "node-fetch": "^2.3.0"
   },
   "cloud-repo-tools": {
     "test": {
